Correcoes do apontamento do sonar e implementado testes unitarios e integrados